fixed homepage overflow with large images

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -113,7 +113,7 @@ header {
 }
 .largepost
 {
-    max-height: 50vh;
+    //max-height: 50vh;
     width: 83%;
     height: 40%;
     font-size: 200%;
@@ -127,7 +127,7 @@ header {
     {
     img
     {
-        height: 50%;
+        height: 80%;
         width: auto;
     }
 }
